productions/veadk/archives/1.1.4/en/get-started/installation.mdx
---
title: "Installation"
zh_link: "/productions/veadk/archives/1.1.4/zh/get-started/installation"
---

## Prerequisites

- Python 3.10 or later.
- A Volcengine Ark API key for calling models, created in the [Ark console](https://console.volcengine.com/ark).

## Install the released baseline

Install VeADK 1.0.9, the released baseline for this Preview, from [PyPI](https://pypi.org/project/veadk-python/):

```bash lines
pip install "veadk-python==1.0.9"
```

<Note>
  PyPI 1.0.9 does not contain capabilities listed under Unreleased in the changelog. Use the Preview source installation below to evaluate those capabilities.
</Note>

## Optional dependency groups

VeADK provides optional dependency groups (extras) for on-demand capabilities,
installed individually as needed:

```bash lines
pip install "veadk-python[extensions]"
```

| Extra | Purpose |
| --- | --- |
| `github-cicd` | Encryption dependency required by Studio "Attach continuous delivery" to write GitHub Actions Secrets |
| `extensions` | Feishu channel, Cozeloop, LlamaIndex, and related integrations |
| `codex` | OpenAI Codex SDK and Codex CLI binary, used by the Codex runtime |
| `database` | Redis, MySQL, Viking DB, mem0, and other storage backends |
| `eval` | Evaluation via DeepEval and Google ADK |
| `a2ui` | A2UI (agent-driven UI) |
| `harness` | Harness servers and the Headroom integration |
| `harness-sidecar` | AgentKit Python SDK required by the Harness Sidecar managed runtime |
| `pdf` | Backward-compatible install alias; PDF rendering dependencies are installed by default starting in 1.0.5 |

The `speech` and `cli` extras remain available for compatibility with existing install commands but add no dependencies starting in 1.0.5.

## Install the Preview source

The Preview source is the current main line of the public VeADK repository. Create an isolated environment and install it with [uv](https://docs.astral.sh/uv/):

```bash lines
git clone --depth 1 https://github.com/volcengine/veadk-python.git
cd veadk-python

# Create a Python 3.12 virtual environment
uv venv --python 3.12

# Install dependencies (add --extra <name> or --all-extras for extras)
uv sync --all-extras

# Install VeADK in editable mode
uv pip install -e .
```

The main line can continue to change and does not carry the compatibility guarantees of a released version. Use a pinned PyPI release in production; use the Preview source only to evaluate unreleased capabilities or contribute changes.

Once installed, continue to the [Quickstart](/productions/veadk/preview/en/get-started/quickstart) to
run your first agent.
